--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "n-queens-solver",
+  "name": "Task-NQueens-Frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://university-of-sussex-ase.github.io/Task-NQueens-Frontend/",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,9 +14,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-coverage": "react-scripts test --coverage",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
